fix: overflow issues on safari

--- a/app/components/Configurator/Configurator.scss
+++ b/app/components/Configurator/Configurator.scss
@@ -84,6 +84,8 @@
 
 .shapeVideo {
   position: absolute;
+  right: -50px;
+  bottom: 100px;
   z-index: 3;
   width: 79px;
   height: 38px;
